# shopby-server-sdk-py

./: .env.sample  .gitignore  .prod.env.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
claude-docs/: api-implementation-guide.md  scripts.md
docs/: api-implementation-guide.md  scripts.md
docs/api/: admin-server-public.yml  admin-shop-public.yml  auth-shop-public.yml  claim-server-public.yml  claim-shop-public.yml  delivery-server-public.yml  display-server-public.yml  display-shop-public.yml  manage-server-public.yml  manage-shop-public.yml  marketing-shop-public.yml  member-server-public.yml  member-shop-public.yml  order-friends-server-public.yml  order-server-public.yml  order-shop-public.yml  product-server-public.yml  product-shop-public.yml  promotion-server-public.yml  promotion-shop-public.yml  workspace-server-public.yml
scripts/: get_changed_products.py  get_event_detail.py  get_member_groups.py  get_members.py  get_order_detail.py  get_orders.py  get_product_detail.py  get_product_detail_v1.py  get_product_detail_v3.py  get_profile_groups.py  infer_schema.py  patch_product.py  search_products.py  smoke_test_readonly.py  smoke_test_shop_readonly.py  validate_all_products_v1.py  validate_models_deep.py
shopby-docs/: display-server-public.yml  member-server-public.yml
shopby_sdk/: config.py
shopby_sdk/base/: __init__.py  dto.py  kst.py
shopby_sdk/clients/: base.py
shopby_sdk/clients/admin/: __init__.py  client.py  models.py
shopby_sdk/clients/claim/: __init__.py  client.py  models.py
shopby_sdk/clients/delivery/: __init__.py  client.py  models.py
shopby_sdk/clients/display/: __init__.py  client.py  models.py
shopby_sdk/clients/examples/: client.py  models.py
shopby_sdk/clients/manage/: __init__.py  client.py  models.py
shopby_sdk/shop/: __init__.py  base.py
src/: config.py
(+90 files in other folders)
