[project]
name = "shopby-server-sdk-py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "ruff>=0.14.5",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py313"
fix = true
output-format = "grouped"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]